# content-test-enforcer

./: .gitignore  README.md  pyproject.toml  tox.ini
content_test_enforcer/: __init__.py
test/: test_e2e.py
test/example-notebooks/: fail.ipynb  pass.ipynb
